--- a/01_alb-controller/.env
+++ b/01_alb-controller/.env
@@ -1,5 +1,5 @@
 export RELEASE="aws-load-balancer-controller"
-export NAMESPACE="kube-system"
+export NAMESPACE="dev"
 export AWS_REGION="ap-northeast-2"
 export CLUSTER="production"
 export ACCOUNT_ID="596906176357"
